--- a/.gitignore
+++ b/.gitignore
@@ -199,4 +199,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-backend/.langgraph_api
+backend/.langgraph_api*.pid
